cleaned up code

--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
     <div class="box">
       <div class="row row-offcanvas row-offcanvas-left">
 
-
         <!-- sidebar -->
         <div class="column col-sm-2 col-xs-1 sidebar-offcanvas " id="sidebar">
           <div id = "logoimage">
@@ -115,10 +114,8 @@
             <li id="skills-xs"><a href="#" class="text-center"><i class="fa fa-wrench"></i><span class="menuitemhide">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Skills</span></a></li>
             <li id="projects-xs"><a href="#" class="text-center"><i class="fa fa-flask"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Projects</span></a></li>
             <li id="connect-xs"><a href="#" class="text-center"><i class="fa fa-comments"></i><span class="menuitemhide">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact</span></a></li>
-            <li id="resume-xs"><a href="/files/N_LIU_RESUME.pdf" target="_blank"" class="text-center"><i class="fa fa-clipboard"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Resume</span></a></li>
-
+            <li id="resume-xs"><a href="/files/N_LIU_RESUME.pdf" target="_blank" class="text-center"><i class="fa fa-clipboard"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Resume</span></a></li>
           </ul>
-
         </div>
         <!-- /sidebar -->
 
@@ -164,7 +161,6 @@
               </div>
             </div>
 
-
             <!-- content for the skillset page -->
 
             <div class="contentdiv" id="skillscontent" style="display:none;">
@@ -203,25 +199,21 @@
                     <div class="panel-body">
                       HTML
                       <span class="label label-success" style="float:right;">Proficient</span>
-
                     </div>
                     <hr>
                     <div class="panel-body">
                       CSS
                       <span class="label label-success" style="float:right;">Proficient</span>
-
                     </div>
                     <hr>
                     <div class="panel-body">
                       JavaScript
                       <span class="label label-success" style="float:right;">Proficient</span>
-
                     </div>
                     <hr>
                     <div class="panel-body">
                       JQuery
                       <span class="label label-success" style="float:right;">Proficient</span>
-
                     </div>
                     <hr>
                   </div>
@@ -241,7 +233,6 @@
                   </div>
                 </div>
               </div>
-
               <h3>Programming Languages</h3>
               <div class="row">
                 <div class="col-sm-4" style="padding-left: 0px;">
@@ -304,11 +295,8 @@
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
-
-
           <div class="contentdiv" id="projectscontent" style="display:none;">
             <div class="projectbanner banner shadow-z-2">
               <div class="bannerpadding">
@@ -322,124 +310,105 @@
             <!-- Not yet
             <p><i>Click on a card to learn more.</i></p>
           -->
-          </br>
-          <div class = "cardcontainer">
-
-            <div class = "item">
-              <div class="panel panel-default">
-                <div class="panel-body hoverpanel" >
-                  <div class="time-period" style="float:right;">Coming Winter 2014</div>
-                  <h3><b>GrowHaus</b> <span class="label label-success">Project In Progress</span></h3>
-                  <p>An intelligent, automated greenhouse.</p>
-                </br>
-                <p class="alignleft">Arduino, Raspberry Pi.</p>
-
-                <!-- In progress
-                  <p class="alignright">
-                    <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
-                    &nbsp;
-                    <a href="https://github.com/isundaylee/BitStation-App" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-
-                  </p>
-                -->
-
-                <div class="clear"></div>
-              </div>
-            </div>
-          </div>
-
+        </br>
+        <div class = "cardcontainer">
           <div class = "item">
             <div class="panel panel-default">
-              <div class="panel-body hoverpanel">
+              <div class="panel-body hoverpanel" >
                 <div class="time-period" style="float:right;">Coming Winter 2014</div>
-                <h3><b>Omnituens</b> <span class="label label-success">Project In Progress</span></h3>
-                <p>An open source, affordable device to perform automated malaria diagnoses on blood samples. Let's put medical imaging in the hands of those who need it most.</p>
+                <h3><b>GrowHaus</b> <span class="label label-success">Project In Progress</span></h3>
+                <p>An intelligent, automated greenhouse.</p>
               </br>
-              <p class="alignleft">Raspberry Pi, Python.</p>
-
+              <p class="alignleft">Arduino, Raspberry Pi.</p>
               <!-- In progress
-                <p class="alignright">
-                  <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
-                  &nbsp;
-                  <a href="https://github.com/isundaylee/BitStation-App" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-
-                </p>
-                <div class="clear"></div>
-              -->
-            </div>
-          </div>
-        </div>
-
-        <div class = "item">
-          <div class="panel panel-default">
-            <div class="panel-body hoverpanel">
-              <div class="time-period" style="float:right;">Fall 2014</div>
-              <h3><b>Falangafone (Top 20 @ HackPrinceton Fall 2014)</b></h3>
-              <p>Use Leap Motion and your dear phalanges to interact with and meld your music in ways never seen before.</p>
-            </br>
-            <p class="alignleft">Flask, Leap Motion API, Python, Pyo, Squirrel, Electric Imp, HTML, CSS, JavaScript</p>
-            <p class="alignright">
-              <a href="http://www.instructables.com/id/Falangafone-Use-Gestures-to-Control-Your-Music/" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
+              <p class="alignright">
+              <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
               &nbsp;
-              <a href="https://github.com/mitchellgu/Falangafone" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-
+              <a href="https://github.com/isundaylee/BitStation-App" target="_blank"><i class="fa fa-github fa-2x"></i></a>
             </p>
-            <div class="clear"></div>
-          </div>
-        </div>
-      </div>
-
-      <div class = "item">
-        <div class="panel panel-default">
-          <div class="panel-body hoverpanel">
-            <div class="time-period" style="float:right;">Fall 2014</div>
-            <h3><b>r/nbastreams bot</b></h3>
-            <p>A Reddit bot that scrapes basketball games from ESPN and posts them prior to gametime.</p>
-          </br>
-          <p class="alignleft">Python Reddit API Wrapper, Python, cron.</p>
-          <p class="alignright">
-            <a href="https://reddit.com/r/nbastreams" target="_blank"><i class="fa fa-reddit fa-2x"></i></a>
-            &nbsp;
-            <a href="https://github.com/nelson-liu/rnbastreams-bot" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-
-          </p>
+          -->
           <div class="clear"></div>
         </div>
       </div>
     </div>
-
     <div class = "item">
       <div class="panel panel-default">
         <div class="panel-body hoverpanel">
-          <div class="time-period" style="float:right;">Summer 2014</div>
-          <h3><b>BitStation (Improving MIT Award @ MIT BitComp 2014)</b></h3>
-          <p>A MIT Kerberos - Integrated Bitcoin wallet. Bypass unwieldy Bitcoin addresses and send money via MIT ID.</p>
+          <div class="time-period" style="float:right;">Coming Winter 2014</div>
+          <h3><b>Omnituens</b> <span class="label label-success">Project In Progress</span></h3>
+          <p>An open source, affordable device to perform automated malaria diagnoses on blood samples. Let's put medical imaging in the hands of those who need it most.</p>
         </br>
-        <p class="alignleft">Ruby on Rails, Coinbase API, JavaScript, HTML, CSS.</p>
+        <p class="alignleft">Raspberry Pi, Python.</p>
+        <!-- In progress
         <p class="alignright">
-          <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
-          &nbsp;
-          <a href="https://github.com/isundaylee/BitStation-App" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-
-        </p>
-        <div class="clear"></div>
-      </div>
-    </div>
+        <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
+        &nbsp;
+        <a href="https://github.com/isundaylee/BitStation-App" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+      </p>
+      <div class="clear"></div>
+    -->
   </div>
-
-
 </div>
-
 </div>
-
+<div class = "item">
+  <div class="panel panel-default">
+    <div class="panel-body hoverpanel">
+      <div class="time-period" style="float:right;">Fall 2014</div>
+      <h3><b>Falangafone (Top 20 @ HackPrinceton Fall 2014)</b></h3>
+      <p>Use Leap Motion and your dear phalanges to interact with and meld your music in ways never seen before.</p>
+    </br>
+    <p class="alignleft">Flask, Leap Motion API, Python, Pyo, Squirrel, Electric Imp, HTML, CSS, JavaScript</p>
+    <p class="alignright">
+      <a href="http://www.instructables.com/id/Falangafone-Use-Gestures-to-Control-Your-Music/" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
+      &nbsp;
+      <a href="https://github.com/mitchellgu/Falangafone" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+    </p>
+    <div class="clear"></div>
+  </div>
+</div>
+</div>
+<div class = "item">
+  <div class="panel panel-default">
+    <div class="panel-body hoverpanel">
+      <div class="time-period" style="float:right;">Fall 2014</div>
+      <h3><b>r/nbastreams bot</b></h3>
+      <p>A Reddit bot that scrapes basketball games from ESPN and posts them prior to gametime.</p>
+    </br>
+    <p class="alignleft">Python Reddit API Wrapper, Python, cron.</p>
+    <p class="alignright">
+      <a href="https://reddit.com/r/nbastreams" target="_blank"><i class="fa fa-reddit fa-2x"></i></a>
+      &nbsp;
+      <a href="https://github.com/nelson-liu/rnbastreams-bot" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+    </p>
+    <div class="clear"></div>
+  </div>
+</div>
+</div>
+<div class = "item">
+  <div class="panel panel-default">
+    <div class="panel-body hoverpanel">
+      <div class="time-period" style="float:right;">Summer 2014</div>
+      <h3><b>BitStation (Improving MIT Award @ MIT BitComp 2014)</b></h3>
+      <p>A MIT Kerberos - Integrated Bitcoin wallet. Bypass unwieldy Bitcoin addresses and send money via MIT ID.</p>
+    </br>
+    <p class="alignleft">Ruby on Rails, Coinbase API, JavaScript, HTML, CSS.</p>
+    <p class="alignright">
+      <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
+      &nbsp;
+      <a href="https://github.com/isundaylee/BitStation-App" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+    </p>
+    <div class="clear"></div>
+  </div>
+</div>
+</div>
+</div>
+</div>
 </div>
 <!-- Not using this
-  <div class="contentdiv" id="resumecontent" style="display:none;">
-    resume
-  </div>
+<div class="contentdiv" id="resumecontent" style="display:none;">
+resume
+</div>
 -->
-
-
 <div class="contentdiv" id="connectcontent" style="display:none;">
   <div class="connectbanner banner shadow-z-2">
     <div class="bannerpadding">
@@ -453,21 +422,21 @@
   <p><i>Click on a card for a direct link.</i></p>
   <div class = "row">
     <div class="col-sm-6" style="padding-left: 0px;">
-  <div class = "cardcontainer">
-    <div class = "item">
-      <div class="  panel panel-default" style="background-color: #4CAF50; text-align: center; color: white;" onclick="window.open('mailto:nelson@nelsonliu.me', 'emailWindow');">
-        <div class="panel-body hoverpanel socialcard">
-          <i class="fa fa-envelope-o fa-4x"></i>
+      <div class = "cardcontainer">
+        <div class = "item">
+          <div class="  panel panel-default" style="background-color: #4CAF50; text-align: center; color: white;" onclick="window.open('mailto:nelson@nelsonliu.me', 'emailWindow');">
+            <div class="panel-body hoverpanel socialcard">
+              <i class="fa fa-envelope-o fa-4x"></i>
+            </br>
+            <h3>nelson [at] nelsonliu.me</h3>
           </br>
-          <h3>nelson [at] nelsonliu.me</h3>
-        </br>
+        </div>
       </div>
     </div>
   </div>
 </div>
-</div>
-  <!--^end of card-->
-  <div class="col-sm-6" style="padding-left: 0px;">
+<!--^end of card-->
+<div class="col-sm-6" style="padding-left: 0px;">
   <div class = "cardcontainer">
     <div class = "item">
       <div class="  panel panel-default" style="background-color: #2196F3; text-align: center; color: white;" onclick="window.open('https://lnkd.in/bbDXB8B','mywindow');">
@@ -481,10 +450,8 @@
 </div>
 </div>
 </div>
-
 </div>
 <!--^end of row-->
-
 <div class = "row">
   <div class="col-sm-6" style="padding-left: 0px;">
     <div class = "cardcontainer">
@@ -515,29 +482,16 @@
 </div>
 </div>
 </div>
-
 </div>
 <!--^end of row-->
-
-
 </div>
 <!--^end of contentpadding-->
-
 </div>
 <!--^end of contact section-->
-
-
-
-
-
-
-  <!-- /main -->
-
+<!-- /main -->
 </div>
 </div>
 </div>
 </div>
-
 </body>
-
 </html>
