added new music

--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
                   <li><a href="http://www.jmonae.com" target="_blank">Janelle Monáe</a></li>
                   <li><a href="http://kendricklamar.com" target="_blank">Kendrick Lamar</a></li>
                   <li><a href="http://muse.mu" target="_blank">Muse</a></li>
-                  <li><a href="http://alligatoah.de/" target="_blank">Alligatoah</a></li>
+                  <li><a href="http://alligatoah.de" target="_blank">Alligatoah</a></li>
+                  <li><a href="http://www.vampireweekend.com" target="_blank">Vampire Weekend</a></li>
+
                 </ul>
               </p>
               <p> Bitcoin Address: <br>
