--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <p> I'm a developer from Southern California melding my passions for programming, computer science research, and
               electrical engineering by creating meaningful products and services. I currently attend Troy High School as a member of the class of 2015.</p>
               <p>I love research! I've previously worked with <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s <a href="http://groups.csail.mit.edu/infolab/" target="_blank">InfoLab group</a> on the <a href="http://start.csail.mit.edu/index.php" target="_blank">START project</a>,
-                and <a href="http://www2.bren.ucsb.edu/~keller/default.htm" target="_blank">UCSB's Bren School of Environmental Science and Management.</a>; my research interests are varied, and I've done both independent and supervised work in subjects ranging from brain control interfaces
+                and <a href="http://www2.bren.ucsb.edu/~keller/default.htm" target="_blank">UCSB's Bren School of Environmental Science and Management</a>; my research interests are varied, and I've done both independent and supervised work in subjects ranging from brain control interfaces
                 , natural language processing, computer modeling of natural processes, and even machine learning.</p>
                 <p>Want to know more? Check out the links on the left-hand bar!</p>
               </br>
