--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <div class="panel-body hoverpanel">
       <div class="time-period" style="float:right;">Fall 2014</div>
       <h3><b>r/nbastreams bot</b></h3>
-      <p>A Reddit bot that scrapes basketball games from ESPN and posts them prior to gametime.</p>
+      <p>A Reddit bot that scrapes basketball games from ESPN and posts a game thread for users to share streams prior to gametime.</p>
     </br>
     <p class="alignleft">Python Reddit API Wrapper, Python, cron.</p>
     <p class="alignright">
