--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <div class="panel-body hoverpanel">
           <div class="time-period" style="float:right;">Coming Winter 2014</div>
           <h3><b>Omnituens</b> <span class="label label-success">Project In Progress</span></h3>
-          <p>An open source, affordable device to perform automated malaria diagnoses on blood samples. Let's put medical imaging in the hands of those who need it most.</p>
+          <p>An open source, affordable device to automate malaria diagnosis on blood samples. Let's put medical imaging in the hands of those who need it most.</p>
         </br>
         <p class="alignleft">Raspberry Pi, Python.</p>
         <!-- In progress
