edited project page

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <h3><b>GrowHaus</b> <span class="label label-success">Project In Progress</span></h3>
                 <p>An intelligent, automated greenhouse.</p>
               </br>
-              <p class="alignleft">Arduino, Raspberry Pi.</p>
+              <p class="alignleft">Built With: Arduino, Raspberry Pi.</p>
               <!-- In progress
               <p class="alignright">
               <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
@@ -340,7 +340,7 @@
           <h3><b>Omnituens</b> <span class="label label-success">Project In Progress</span></h3>
           <p>An open source, affordable device to automate malaria diagnosis on blood samples. Let's put medical imaging in the hands of those who need it most.</p>
         </br>
-        <p class="alignleft">Raspberry Pi, Python.</p>
+        <p class="alignleft">Built With: Raspberry Pi, Python.</p>
         <!-- In progress
         <p class="alignright">
         <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
@@ -359,7 +359,7 @@
       <h3><b>Falangafone (Top 20 @ HackPrinceton Fall 2014)</b></h3>
       <p>Use Leap Motion and your dear phalanges to interact with and meld your music in ways never seen before.</p>
     </br>
-    <p class="alignleft">Flask, Leap Motion API, Python, Pyo, Squirrel, Electric Imp, HTML, CSS, JavaScript</p>
+    <p class="alignleft">Built With: Flask, Leap Motion API, Python, Pyo, Squirrel, Electric Imp, HTML, CSS, JavaScript</p>
     <p class="alignright">
       <a href="http://www.instructables.com/id/Falangafone-Use-Gestures-to-Control-Your-Music/" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
       &nbsp;
@@ -376,7 +376,7 @@
       <h3><b>r/nbastreams bot</b></h3>
       <p>A Reddit bot that scrapes basketball games from ESPN and posts a game thread for users to share streams prior to gametime.</p>
     </br>
-    <p class="alignleft">Python Reddit API Wrapper, Python, cron.</p>
+    <p class="alignleft">Built With: Python Reddit API Wrapper, Python, cron.</p>
     <p class="alignright">
       <a href="https://reddit.com/r/nbastreams" target="_blank"><i class="fa fa-reddit fa-2x"></i></a>
       &nbsp;
@@ -393,7 +393,7 @@
       <h3><b>BitStation (Improving MIT Award @ MIT BitComp 2014)</b></h3>
       <p>A MIT Kerberos - Integrated Bitcoin wallet. Bypass unwieldy Bitcoin addresses and send money via MIT ID.</p>
     </br>
-    <p class="alignleft">Ruby on Rails, Coinbase API, JavaScript, HTML, CSS.</p>
+    <p class="alignleft">Built With: Ruby on Rails, Coinbase API, JavaScript, HTML, CSS.</p>
     <p class="alignright">
       <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
       &nbsp;
