added dynamic date copyright footer

--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
             <hr class="nomargin">
           </ul>
 
+          <ul class="list-unstyled hidden-xs" id="sidebar-footer">
+            <li>
+              <h6>&copy; <script type="text/javascript">
+              document.write(new Date().getFullYear());
+              </script>, Nelson Liu.</h6>
+            </li>
+          </ul>
 
 
           <!-- tiny only nav-->
