updated with pennapps project

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           <div class = "item">
             <div class="panel panel-default">
               <div class="panel-body hoverpanel" >
-                <div class="time-period" style="float:right;">Coming Winter 2014</div>
+                <div class="time-period" style="float:right;">Coming Spring 2015</div>
                 <h3><b>GrowHaus</b> <span class="label label-success">Project In Progress</span></h3>
                 <p>An intelligent, automated greenhouse.</p>
               </br>
@@ -343,7 +343,7 @@
     <div class = "item">
       <div class="panel panel-default">
         <div class="panel-body hoverpanel">
-          <div class="time-period" style="float:right;">Coming Winter 2014</div>
+          <div class="time-period" style="float:right;">Coming Spring 2015</div>
           <h3><b>Omnituens</b> <span class="label label-success">Project In Progress</span></h3>
           <p>An open source, affordable device to automate malaria diagnosis on blood samples. Let's put medical imaging in the hands of those who need it most.</p>
         </br>
@@ -356,6 +356,23 @@
       </p>
       <div class="clear"></div>
     -->
+  </div>
+</div>
+</div>
+<div class = "item">
+  <div class="panel panel-default">
+    <div class="panel-body hoverpanel">
+      <div class="time-period" style="float:right;">Fall 2014</div>
+      <h3><b>MyoDrone (Top 30 @ PennApps Winter 2015)</b></h3>
+      <p>Seen a selfie stick? We used the Myo and a Parrot drone to build a gesture controlled "selfie drone"!</p>
+    </br>
+    <p class="alignleft">Built With: Intel Edison, node.js</p>
+    <p class="alignright">
+      <a href="http://vimeo.com/117117898" target="_blank"><i class="fa fa-youtube-play fa-2x"></i></a>
+      &nbsp;
+      <a href="https://github.com/nelson-liu/MyoDrone" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+    </p>
+    <div class="clear"></div>
   </div>
 </div>
 </div>
