edited materials for pennapps project

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
       <h3><b>MyoDrone (Top 30 @ PennApps Winter 2015)</b></h3>
       <p>Seen a selfie stick? We used the Myo and a Parrot drone to build a gesture controlled "selfie drone"!</p>
     </br>
-    <p class="alignleft">Built With: Intel Edison, node.js</p>
+    <p class="alignleft">Built With: Intel Edison, node.js, Parrot AR Drone 2.0</p>
     <p class="alignright">
       <a href="http://vimeo.com/117117898" target="_blank"><i class="fa fa-youtube-play fa-2x"></i></a>
       &nbsp;
