added node experience

--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
                     </div>
                     <hr>
                     <div class="panel-body">
+                      node.js
+                      <span class="label label-warning" style="float:right;">Intermediate</span>
+                    </div>
+                    <hr>
+                    <div class="panel-body">
                       Ruby on Rails
                       <span class="label label-warning" style="float:right;">Intermediate</span>
                     </div>
