updated reading list and music list

--- a/index.html
+++ b/index.html
@@ -151,10 +151,12 @@
               <p> I'm currently reading: </br>
                 <ul>
                   <li><a href="http://mitpress.mit.edu/books/introduction-algorithms" target="_blank">Introduction to Algorithms, 3rd Edition (Cormen, Leiserson, Rivest, and Stein)</a></li>
+                  <li><a href="http://www.careercup.com/book" target="_blank">Cracking the Coding Interview (McDowell)</a></li>
                 </ul>
               </p>
               <p> Music I like: <br>
                 <ul>
+                  <li><a href="http://www.weezer.com" target="_blank">Weezer</a></li>
                   <li><a href="http://royksopp.com" target="_blank">Röyksopp</a></li>
                   <li><a href="http://lifeandtimes.com" target="_blank">Jay Z</a></li>
                   <li><a href="http://www.jmonae.com" target="_blank">Janelle Monáe</a></li>
