added blog page, still have to finish post

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
             <hr class="nomargin">
             <li class="withripple" id="resume"><a href="/files/N_LIU_RESUME.pdf" target="_blank"><i class="fa fa-clipboard"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Resume</a></li>
             <hr class="nomargin">
+            <li class="withripple" id="blog"><a href="/writing/index.html" target="_blank"><i class="fa fa-pencil"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Blog</a></li>
+            <hr class="nomargin">
           </ul>
 
           <ul class="list-unstyled hidden-xs" id="sidebar-footer">
@@ -121,7 +123,8 @@
             <li id="skills-xs"><a href="#" class="text-center"><i class="fa fa-wrench"></i><span class="menuitemhide">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Skills</span></a></li>
             <li id="projects-xs"><a href="#" class="text-center"><i class="fa fa-flask"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Projects</span></a></li>
             <li id="connect-xs"><a href="#" class="text-center"><i class="fa fa-comments"></i><span class="menuitemhide">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact</span></a></li>
-            <li id="resume-xs"><a href="/files/N_LIU_RESUME.pdf" target="_blank" class="text-center"><i class="fa fa-clipboard"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Resume</span></a></li>
+            <li id="resume-xs"><a href="/writing/index.html" target="_blank" class="text-center"><i class="fa fa-clipboard"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Resume</span></a></li>
+            <li id="resume-xs"><a href="/writing/index.html" target="_blank" class="text-center"><i class="fa fa-pencil"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Blog</span></a></li>
           </ul>
         </div>
         <!-- /sidebar -->
