added a coming soon to draft

--- a/writing/setting-up-a-cs-go-server-part-one.html
+++ b/writing/setting-up-a-cs-go-server-part-one.html
@@ -96,7 +96,7 @@
           <div class="blogcontentpadding">
         </br>
         <div class = "cardcontainer">
-          <div class = "item">
+          <!-- <div class = "item">
             <div class="panel panel-default">
               <div class="panel-body hoverpanel" >
                 <div class="time-period" style="float:right;">Posted February 12, 2015</div>
@@ -106,22 +106,22 @@
               </br>
               <a href="setting-up-a-cs-go-server-part-one.html" target="_blank">View Full Post...</a>
 
-              <!-- In progress
               <p class="alignright">
               <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
               &nbsp;
               <a href="https://github.com/isundaylee/BitStation-App" target="_blank"><i class="fa fa-github fa-2x"></i></a>
             </p>
-          -->
           <div class="clear"></div>
         </div>
       </div>
     </div>
+  -->
+
 
     <div class = "item">
       <div class="panel panel-default">
         <div class="panel-body hoverpanel" >
-          <h3><b>More Posts Coming Soon!</b></h3>
+          <h3><b>Currently writing, come back soon!</b></h3>
     <div class="clear"></div>
   </div>
 </div>
