added syntax highlighting js library

--- a/writing/index.html
+++ b/writing/index.html
@@ -67,8 +67,11 @@
   <!--Cheet.js -->
   <script src="../bower_components/cheet.js/cheet.min.js"></script>
 
+  <!--SyntaxHighlighter -->
+  <link rel="import" src="bower_components/syntax-highlight/syntax-highlight.html">
 
-  <script src="../js/scripts.js"></script>
+  <!--Custom JS -->
+  <script src="js/scripts.js"></script>
 
 
   <script>
