--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
   <!--Cheet.js -->
   <script src="/bower_components/cheet.js/cheet.min.js"></script>
 
+  <!--SyntaxHighlighter -->
+  <link rel="import" src="bower_components/syntax-highlight/syntax-highlight.html">
 
+  <!--Custom JS -->
   <script src="js/scripts.js"></script>
 
 
