edited some descriptions.

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <div class="panel-body hoverpanel">
           <div class="time-period" style="float:right;">Coming Spring 2015</div>
           <h3><b>Omnituens</b> <span class="label label-success">Project In Progress</span></h3>
-          <p>An open source, affordable device to automate malaria diagnosis on blood samples. Let's put medical imaging in the hands of those who need it most.</p>
+          <p>An open source, affordable device to automate malaria diagnosis on blood samples.</p>
         </br>
         <p class="alignleft">Built With: Raspberry Pi, Python.</p>
         <!-- In progress
