setup a new blog post. lost interest in previous one for now, ill get to it eventually.

--- a/writing/junit-test-command-line.html
+++ b/writing/junit-test-command-line.html
@@ -99,53 +99,10 @@
           <div class="blogcontentpadding">
         </br>
         <div class = "cardcontainer">
-          <div class = "item">
-            <div class="panel panel-default">
-              <div class="panel-body hoverpanel" >
-                <div class="time-period" style="float:right;">Posted February 12, 2015</div>
-                <h3><b>Installing and Configuring a Counter Strike: GO Server (Part One)</b></h3>
-                <p>My high school's e-sports club recently asked me to set up a Counter Strike: Global Offensive Server (CS:GO) for use in an upcoming tournament and write about my experience for the benefit of posterity.
-                  This post is the first in a series, and it introduces and details the prerequisites necessary to install a CS:GO Server and helps a user set up a fresh Ubuntu machine.</p>
-              </br>
-              <a href="setting-up-a-cs-go-server-part-one.html" target="_blank">View Full Post...</a>
-
-              <!-- In progress
-              <p class="alignright">
-              <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
-              &nbsp;
-              <a href="https://github.com/isundaylee/BitStation-App" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-            </p>
-          -->
-          <div class="clear"></div>
-        </div>
-      </div>
-    </div>
-
-    <div class = "item">
+    <div class = "itemnohover">
       <div class="panel panel-default">
-        <div class="panel-body hoverpanel" >
-          <div class="time-period" style="float:right;">Posted March 09, 2015</div>
-          <h3><b>Easily Running JUnit Tests in Command Line</b></h3>
-          <p>I've come to enjoy using Atom and the command line for writing Java code, but was unable to use JUnit testers until recently. In this post, I detail how to setup JUnit and simplify its usage.</p>
-        </br>
-        <a href="junit-test-command-line.html" target="_blank">View Full Post...</a>
-
-        <!-- In progress
-        <p class="alignright">
-        <a href="https://bitstation.herokuapp.com" target="_blank"><i class="fa fa-globe fa-2x"></i></a>
-        &nbsp;
-        <a href="https://github.com/isundaylee/BitStation-App" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-      </p>
-    -->
-    <div class="clear"></div>
-  </div>
-</div>
-</div>
-
-    <div class = "item">
-      <div class="panel panel-default">
-        <div class="panel-body hoverpanel" >
-          <h3><b>More Posts Coming Soon!</b></h3>
+        <div class="panel-body" >
+          <h3><b>Currently writing, come back soon!</b></h3>
     <div class="clear"></div>
   </div>
 </div>
