--- a/writing/setting-up-a-cs-go-server-part-one.html
+++ b/writing/setting-up-a-cs-go-server-part-one.html
@@ -71,7 +71,7 @@
   <link rel="import" src="bower_components/syntax-highlight/syntax-highlight.html">
 
   <!--Custom JS -->
-  <script src="js/scripts.js"></script>
+  <script src="../js/scripts.js"></script>
 
 
   <script>
@@ -121,9 +121,9 @@
   -->
 
 
-    <div class = "item">
+    <div class = "itemnohover">
       <div class="panel panel-default">
-        <div class="panel-body hoverpanel" >
+        <div class="panel-body" >
           <h3><b>Currently writing, come back soon!</b></h3>
     <div class="clear"></div>
   </div>
