--- a/index.html
+++ b/index.html
@@ -510,11 +510,11 @@ resume
 <div class="col-sm-6" style="padding-left: 0px;">
   <div class = "cardcontainer">
     <div class = "item">
-      <div class="panel panel-default" style="background-color: #D50000; text-align: center; color: white;" onclick="window.open('https://medium.com/@nelsonliu','mywindow');">
+      <div class="panel panel-default" style="background-color: #D50000; text-align: center; color: white;" onclick="window.open('nelsonliu.me/writing/index.html','mywindow');">
         <div class="panel-body hoverpanel socialcard">
           <i class="fa fa-pencil-square fa-4x"></i>
         </br>
-        <h3>medium.com/@nelsonliu</h3>
+        <h3>nelsonliu.me/writing/index.html</h3>
       </br>
     </div>
   </div>
