edited linkedin url

--- a/index.html
+++ b/index.html
@@ -478,11 +478,11 @@ resume
 <div class="col-sm-6" style="padding-left: 0px;">
   <div class = "cardcontainer">
     <div class = "item">
-      <div class="  panel panel-default" style="background-color: #2196F3; text-align: center; color: white;" onclick="window.open('https://lnkd.in/bbDXB8B','mywindow');">
+      <div class="  panel panel-default" style="background-color: #2196F3; text-align: center; color: white;" onclick="window.open('https://linkedin.com/in/nelsonliu1','mywindow');">
         <div class="panel-body hoverpanel socialcard">
           <i class="fa fa-linkedin-square fa-4x"></i>
         </br>
-        <h3>lnkd.in/bbDXB8B</h3>
+        <h3>linkedin.com/in/nelsonliu1</h3>
       </br>
     </div>
   </div>
