--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@
             <h3>Some info about me</h3>
             <p> I'm a developer from Southern California melding my passions for programming, computer science research, and
               electrical engineering by creating meaningful products and services. I currently attend Troy High School as a member of the class of 2015.</p>
-              <p>I love research! I've previously worked with <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s <a href="http://groups.csail.mit.edu/infolab/" target="_blank">InfoLab group</a> on the <a href="http://start.csail.mit.edu/index.php" target="_blank">START project</a>,
+              <p>I've previously worked with <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s <a href="http://groups.csail.mit.edu/infolab/" target="_blank">InfoLab group</a> on the <a href="http://start.csail.mit.edu/index.php" target="_blank">START project</a>,
                 and <a href="http://www2.bren.ucsb.edu/~keller/default.htm" target="_blank">UCSB's Bren School of Environmental Science and Management</a>; my research interests are varied, and I've done both independent and supervised work in subjects ranging from brain control interfaces
                 , natural language processing, computer modeling of natural processes, and even machine learning.</p>
-                <p>Want to know more? Check out the links on the left-hand bar!</p>
               </br>
               <h3>Miscellaneous Tidbits</h3>
               <p> I'm currently reading: </br>
@@ -337,7 +336,7 @@
           <div class = "item">
             <div class="panel panel-default">
               <div class="panel-body hoverpanel" >
-                <div class="time-period" style="float:right;">Coming Spring 2015</div>
+                <!--<div class="time-period" style="float:right;">Coming Spring 2015</div>-->
                 <h3><b>GrowHaus</b> <span class="label label-success">Project In Progress</span></h3>
                 <p>An intelligent, automated greenhouse.</p>
               </br>
@@ -356,9 +355,9 @@
     <div class = "item">
       <div class="panel panel-default">
         <div class="panel-body hoverpanel">
-          <div class="time-period" style="float:right;">Coming Spring 2015</div>
+          <!--<div class="time-period" style="float:right;">Coming Spring 2015</div>-->
           <h3><b>Omnituens</b> <span class="label label-success">Project In Progress</span></h3>
-          <p>An open source, affordable device to automate malaria diagnosis on blood samples.</p>
+          <p>An open source, affordable device to automate malaria diagnosis on blood samples using OpenCV.</p>
         </br>
         <p class="alignleft">Built With: Raspberry Pi, Python.</p>
         <!-- In progress
@@ -377,7 +376,7 @@
     <div class="panel-body hoverpanel">
       <div class="time-period" style="float:right;">Fall 2014</div>
       <h3><b>MyoDrone (Top 30 @ PennApps Winter 2015)</b></h3>
-      <p>Seen a selfie stick? We used the Myo and a Parrot drone to build a gesture controlled "selfie drone"!</p>
+      <p>Used the Myo and a Parrot drone to build a gesture controlled "selfie drone".</p>
     </br>
     <p class="alignleft">Built With: Intel Edison, node.js, Parrot AR Drone 2.0</p>
     <p class="alignright">
