corrected a wrong link path in contact me

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ resume
 <div class="col-sm-6" style="padding-left: 0px;">
   <div class = "cardcontainer">
     <div class = "item">
-      <div class="panel panel-default" style="background-color: #D50000; text-align: center; color: white;" onclick="window.open('nelsonliu.me/writing/index.html','mywindow');">
+      <div class="panel panel-default" style="background-color: #D50000; text-align: center; color: white;" onclick="window.open('/writing/index.html','mywindow');">
         <div class="panel-body hoverpanel socialcard">
           <i class="fa fa-pencil-square fa-4x"></i>
         </br>
