ftploy test commit

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               electrical engineering by creating meaningful products and services. I currently attend Troy High School as a member of the class of 2015, and will be attending the University of Washington starting summer of 2015.</p>
               <p>I've previously worked with <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s <a href="http://groups.csail.mit.edu/infolab/" target="_blank">InfoLab group</a> on the <a href="http://start.csail.mit.edu/index.php" target="_blank">START project</a>,
                 and <a href="http://www2.bren.ucsb.edu/~keller/default.htm" target="_blank">UCSB's Bren School of Environmental Science and Management</a>; my research interests are varied, and I've done both independent and supervised work in subjects ranging from brain control interfaces
-                , natural language processing, computer modeling of natural processes, and even machine learning.</p>
+                , natural language processing, computer modeling of natural processes, and machine learning.</p>
               </br>
               <h3>Miscellaneous Tidbits</h3>
               <p> I'm currently reading: </br>
