updated mongodb proficiency

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     <hr>
                     <div class="panel-body">
                       MongoDB
-                      <span class="label label-danger" style="float:right;">Beginner</span>
+                      <span class="label label-warning" style="float:right;">Intermediate</span>
                     </div>
                   </div>
                 </div>
