added soundhop to projects page. edited pennapps date.

--- a/index.html
+++ b/index.html
@@ -332,7 +332,22 @@
           <div class = "item">
             <div class="panel panel-default">
               <div class="panel-body hoverpanel">
-                <div class="time-period" style="float:right;">Fall 2014</div>
+                <div class="time-period" style="float:right;">Summer 2015</div>
+                <h3><b>SoundHop (Finalist @ AngelHack Seattle 2015)</b></h3>
+                <p>Developed an Android application enabling multiple phones to play the same audio track via Wi-Fi P2P.</p>
+              </br>
+              <p class="alignleft">Built With: Android, Firebase</p>
+              <p class="alignright">
+                <a href="https://github.com/jkunzika/SoundHop" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+              </p>
+              <div class="clear"></div>
+            </div>
+          </div>
+        </div>
+          <div class = "item">
+            <div class="panel panel-default">
+              <div class="panel-body hoverpanel">
+                <div class="time-period" style="float:right;">Spring 2015</div>
                 <h3><b>MyoDrone (Top 30 @ PennApps Winter 2015)</b></h3>
                 <p>Used the Myo and a Parrot drone to build a gesture controlled "selfie drone".</p>
               </br>
